Fixed multiple vulnerabilities from intellij code inspect and snyk report