@@ -1,7 +1,6 @@
 package org.pageseeder.flint.lucene.search;
 
 import org.apache.lucene.analysis.standard.StandardAnalyzer;
-import org.apache.lucene.index.Term;
 import org.junit.AfterClass;
 import org.junit.Assert;
 import org.junit.BeforeClass;
@@ -10,9 +9,11 @@ import org.pageseeder.flint.IndexException;
 import org.pageseeder.flint.local.LocalIndexManager;
 import org.pageseeder.flint.local.LocalIndexManagerFactory;
 import org.pageseeder.flint.lucene.LuceneLocalIndex;
+import org.pageseeder.flint.lucene.facet.FlexibleFieldFacet;
 import org.pageseeder.flint.lucene.util.Bucket;
 import org.pageseeder.flint.lucene.utils.TestListener;
 import org.pageseeder.flint.lucene.utils.TestUtils;
+import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.FileFilter;
@@ -22,10 +23,10 @@ import java.util.List;
 
 public class FacetsTest {
 
-  private static File template  = new File("src/test/resources/template.xsl");
-  private static File documents = new File("src/test/resources/facets");
-  private static FileFilter filter = new FileFilter() { public boolean accept(File file) { return "facets.xml".equals(file.getName()); } };
-  private static File indexRoot = new File("tmp/index");
+  private static final File template  = new File("src/test/resources/template.xsl");
+  private static final File documents = new File("src/test/resources/facets");
+  private static final FileFilter filter = file -> "facets.xml".equals(file.getName());
+  private static final File indexRoot = new File("tmp/index");
 
   private static LuceneLocalIndex index;
   private static LocalIndexManager manager;
@@ -39,7 +40,7 @@ public class FacetsTest {
       index = new LuceneLocalIndex(indexRoot, "facets", new StandardAnalyzer(), documents);
       index.setTemplate("xml", template.toURI());
     } catch (Exception ex) {
-      ex.printStackTrace();
+      LoggerFactory.getLogger(TestUtils.class).error("Something went wrong", ex);
     }
     manager = LocalIndexManagerFactory.createMultiThreads(new TestListener());
     System.out.println("Starting manager!");
@@ -61,24 +62,24 @@ public class FacetsTest {
   @Test
   public void testAllFacets() throws IndexException {
     try {
-      List<String> fields  = Arrays.asList(new String[] {"field1", "field2", "field3"});
-      List<String> values1 = Arrays.asList(new String[] {"value10", "value11", "value12", "value13", "value14", "value15"});
-      List<String> values2 = Arrays.asList(new String[] {"value20", "value21", "value22", "value23", "value24", "value25"});
-      List<String> values3 = Arrays.asList(new String[] {"value30"});
-      List<FieldFacet> facets = Facets.getFacets(20, index);
+      List<String> fields  = Arrays.asList("field1", "field2", "field3");
+      List<String> values1 = Arrays.asList("value10", "value11", "value12", "value13", "value14");
+      List<String> values2 = Arrays.asList("value20", "value21", "value22", "value23", "value24");
+      List<String> values3 = List.of("value30");
+      List<FlexibleFieldFacet> facets = Facets.getFlexibleFacets(null, 20, index);
       Assert.assertEquals(fields.size(), facets.size());
-      for (FieldFacet f : facets) {
+      for (FlexibleFieldFacet f : facets) {
         Assert.assertTrue(fields.contains(f.name()));
-        Bucket<Term> terms = f.getValues();
+        Bucket<String> terms = f.getValues();
         List<String> values = "field1".equals(f.name()) ? values1 :
                               "field2".equals(f.name()) ? values2 : values3;
         Assert.assertEquals(values.size(), terms.items().size());
         for (String v : values) {
-          Assert.assertTrue(terms.items().contains(new Term(f.name(), v)));
+          Assert.assertTrue(terms.items().contains(v));
         }
       }
-    } catch (IOException e) {
-      e.printStackTrace();
+    } catch (IOException ex) {
+      LoggerFactory.getLogger(TestUtils.class).error("Something went wrong", ex);
       Assert.fail();
     }
   }
@@ -86,14 +87,24 @@ public class FacetsTest {
   @Test
   public void testMaxFacets() throws IndexException {
     try {
-      List<FieldFacet> facets = Facets.getFacets(4, index);
-      Assert.assertEquals(1, facets.size());
-      FieldFacet facet = facets.iterator().next();
-      Assert.assertEquals("field3", facet.name());
-      Assert.assertEquals(1, facet.getValues().items().size());
-      Assert.assertEquals(new Term("field3", "value30"), facet.getValues().iterator().next());
-    } catch (IOException e) {
-      e.printStackTrace();
+      List<String> fields  = Arrays.asList("field1", "field2", "field3");
+      List<String> values1 = Arrays.asList("value11", "value12");
+      List<String> values2 = Arrays.asList("value23", "value24");
+      List<String> values3 = List.of("value30");
+      List<FlexibleFieldFacet> facets = Facets.getFlexibleFacets(null, 2, index);
+      Assert.assertEquals(fields.size(), facets.size());
+      for (FlexibleFieldFacet f : facets) {
+        Assert.assertTrue(fields.contains(f.name()));
+        Bucket<String> terms = f.getValues();
+        List<String> values = "field1".equals(f.name()) ? values1 :
+                              "field2".equals(f.name()) ? values2 : values3;
+        Assert.assertEquals(values.size(), terms.items().size());
+        for (String v : values) {
+          Assert.assertTrue(terms.items().contains(v));
+        }
+      }
+    } catch (IOException ex) {
+      LoggerFactory.getLogger(TestUtils.class).error("Something went wrong", ex);
       Assert.fail();
     }
   }
